2011-08-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions.php: fixed in function "string2image" when generate a
	image in other location, now have one more parameter, $homeurl, by default
	empty string.

2011-08-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/users/user_edit.php: Reload page to update skin.

2011-08-30 Koichiro Kikuchi <koichiro@rworks.jp>

	* include/functions_api.php: Fixed join parameter to avoid
	  generating unusable module lines.

2011-08-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/users/configure_user.php: Now action state is showed
	when update user action is performed.

2011-08-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/users/configure_user.php: Reload page to update skin.

2011-08-30  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_graph.php, include/graphs/functions_fsgraph.php,
	include/graphs/fgraph.php: added the parameter $reduce_data_columns by
	default false for to use in vertical columns graph.

2011-08-30  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_agente.php: Fixed URL injection replacing
	safe_input for safe_input_html

2011-08-30  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_enable_disable_alerts.php,
	godmode/massive/massive_standby_alerts.php: Added group recursion
	feature, it allows to search agents in child groups.

2011-08-30  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/modificar_agente.php: Fixed group recursion does
	not work with IE8.

2011-08-29  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/graphs/functions_fsgraph.php, include/graphs/fgraph.php: added
	$homeurl parameter to graph vertical column in flash.
	
	Fixes: #3398097

2011-08-29 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_graph.php: Fixed a bug setting graphic resolution
	to 1 that displays some errors with event graphs. 

	Fixes: #3398524

2011-08-29 Javier Lanz <javier.lanz@artica.es>